<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg">

    <ListView
        android:id="@+id/listView"
        android:paddingLeft="@dimen/video_center_list_padding"
        android:paddingRight="@dimen/video_center_list_padding"
        android:layout_marginLeft="@dimen/video_center_list_margin_left"
        android:layout_marginTop="@dimen/video_center_list_margin_top"
        android:layout_marginBottom="@dimen/video_center_list_margin_bottom"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_toRightOf="@id/listView"
        android:layout_marginLeft="@dimen/distance_video_with_menu"
        android:id="@+id/share"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/share_to_qq"
            android:layout_marginTop="@dimen/video_center_list_margin_top"
            android:layout_marginRight="@dimen/video_center_list_margin_left"
            android:layout_width="match_parent"
            android:layout_height="@dimen/share_to_qq_height"
            android:gravity="center"
            android:text="@string/share_to_qq"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/share_to_wx"
            android:layout_marginTop="@dimen/video_center_list_margin_top"
            android:layout_marginRight="@dimen/video_center_list_margin_left"
            android:layout_width="match_parent"
            android:layout_height="@dimen/share_to_qq_height"
            android:gravity="center"
            android:text="@string/share_to_wx"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/share_to_wb"
            android:layout_marginTop="@dimen/video_center_list_margin_top"
            android:layout_marginRight="@dimen/video_center_list_margin_left"
            android:layout_width="match_parent"
            android:layout_height="@dimen/share_to_qq_height"
            android:gravity="center"
            android:text="@string/share_to_wb"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/switch_share_or_btn"
            android:layout_marginTop="@dimen/video_center_list_margin_top"
            android:layout_marginRight="@dimen/video_center_list_margin_left"
            android:layout_width="match_parent"
            android:layout_height="@dimen/share_to_qq_height"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_toRightOf="@id/listView"
        android:id="@+id/btn"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/distance_video_with_menu">

        <TextView
            android:id="@+id/follow"
            android:layout_marginTop="@dimen/video_center_list_margin_top"
            android:layout_marginRight="@dimen/video_center_list_margin_left"
            android:layout_width="match_parent"
            android:layout_height="@dimen/share_to_qq_height"
            android:gravity="center"
            android:text="@string/follow"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/add_friend"
            android:layout_marginTop="@dimen/video_center_list_margin_top"
            android:layout_marginRight="@dimen/video_center_list_margin_left"
            android:layout_width="match_parent"
            android:layout_height="@dimen/share_to_qq_height"
            android:gravity="center"
            android:text="@string/addfriend"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/go_he"
            android:layout_marginTop="@dimen/video_center_list_margin_top"
            android:layout_marginRight="@dimen/video_center_list_margin_left"
            android:layout_width="match_parent"
            android:layout_height="@dimen/share_to_qq_height"
            android:gravity="center"
            android:text="@string/go_he"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/share_video"
            android:layout_marginTop="@dimen/video_center_list_margin_top"
            android:layout_marginRight="@dimen/video_center_list_margin_left"
            android:layout_width="match_parent"
            android:layout_height="@dimen/share_to_qq_height"
            android:gravity="center"
            android:text="@string/share"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>