<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:minWidth="600dp"
    android:layout_height="wrap_content"
    android:minHeight="400dp"
    android:layout_margin="10dp"
    android:background="@mipmap/dialog_register">

    <ImageView
        android:id="@+id/close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/close"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:src="@mipmap/register_font_bg"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:paddingLeft="15dp"
            android:gravity="left|center"
            android:hint="@string/input_phone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@mipmap/input_bg"/>

        <EditText
            android:id="@+id/ed_password"
            android:layout_marginTop="20dp"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:paddingLeft="15dp"
            android:gravity="left|center"
            android:hint="@string/input_pass"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@mipmap/input_bg"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_code"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:paddingLeft="10dp"
            android:gravity="left|center"
            android:hint="@string/input_code"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@mipmap/input_bg"
            android:inputType="number"/>

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:text="获取验证码"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/code_bg"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="确 定"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/code_bg"/>

</LinearLayout>